Bug 380636 - ldap addressbook book results are not sorted when autocompleting is in action. r=Standard8